{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 1605,
  "lineage": "7c7787c3-0511-e3b7-632b-e7cb422003ac",
  "resources": [
    {
      "module": "module.eip_module[\"eip01\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-001258a1debe3af4e",
            "association_id": "eipassoc-0d8440c98ac3787b2",
            "domain": "vpc",
            "id": "eipalloc-001258a1debe3af4e",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-074f21fd05e257288",
            "private_dns": "ip-192-168-23-104.ap-northeast-1.compute.internal",
            "private_ip": "192.168.23.104",
            "public_dns": "ec2-13-114-121-210.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.114.121.210",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip01"
            },
            "tags_all": {
              "Name": "eip01"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eip_module[\"eip02\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09ef7f27f6a71ddbf",
            "association_id": "eipassoc-0914774430dba6460",
            "domain": "vpc",
            "id": "eipalloc-09ef7f27f6a71ddbf",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0e03870845dbd3861",
            "private_dns": "ip-192-168-58-179.ap-northeast-1.compute.internal",
            "private_ip": "192.168.58.179",
            "public_dns": "ec2-52-193-151-38.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.193.151.38",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip02"
            },
            "tags_all": {
              "Name": "eip02"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eip_module[\"eip03\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d460b31acc130bc",
            "association_id": "eipassoc-0a302b1f8e352cf06",
            "domain": "vpc",
            "id": "eipalloc-02d460b31acc130bc",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-00be895f2811e9be8",
            "private_dns": "ip-192-168-19-38.ap-northeast-1.compute.internal",
            "private_ip": "192.168.19.38",
            "public_dns": "ec2-3-114-210-192.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "3.114.210.192",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip03"
            },
            "tags_all": {
              "Name": "eip03"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eip_module[\"eip04\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0caf22c6bb9c1cbf0",
            "association_id": "eipassoc-06c1f670724a2457b",
            "domain": "vpc",
            "id": "eipalloc-0caf22c6bb9c1cbf0",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0e0e78e385918d324",
            "private_dns": "ip-192-168-52-106.ap-northeast-1.compute.internal",
            "private_ip": "192.168.52.106",
            "public_dns": "ec2-52-195-88-92.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.195.88.92",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip04"
            },
            "tags_all": {
              "Name": "eip04"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.instance_module[\"instance01\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0425d9f31293ecf75",
            "arn": "arn:aws:ec2:ap-northeast-1:252820710416:instance/i-0ce06226e6faa1009",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ce06226e6faa1009",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-tf",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00514a0c4f920e89a",
            "private_dns": "ip-192-168-81-247.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.81.247",
            "public_dns": "ec2-18-183-221-10.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.183.221.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b9212970b29486db",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01f205f1009b7f744"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-078bb4d8b557754a5",
            "tags": {
              "Name": "instance01"
            },
            "tags_all": {
              "Name": "instance01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01f205f1009b7f744"
            ]
          },
          "dependencies": [
            "module.ami_module.data.aws_ami.my_ami",
            "module.security_group_module.aws_security_group.public_security_group",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.instance_module[\"instance02\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0425d9f31293ecf75",
            "arn": "arn:aws:ec2:ap-northeast-1:252820710416:instance/i-00cffa94f42a70b23",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00cffa94f42a70b23",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-tf",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00b97ccd5637b3c5b",
            "private_dns": "ip-192-168-112-92.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.112.92",
            "public_dns": "ec2-18-180-84-196.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.180.84.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08b372b48968803f3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01f205f1009b7f744"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05e6a4c8717a2431d",
            "tags": {
              "Name": "instance02"
            },
            "tags_all": {
              "Name": "instance02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01f205f1009b7f744"
            ]
          },
          "dependencies": [
            "module.ami_module.data.aws_ami.my_ami",
            "module.security_group_module.aws_security_group.public_security_group",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.instance_module[\"jump_server\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0425d9f31293ecf75",
            "arn": "arn:aws:ec2:ap-northeast-1:252820710416:instance/i-0a753cd548b6046e9",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a753cd548b6046e9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-tf",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e5fa131fb4383cb0",
            "private_dns": "ip-192-168-4-110.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.4.110",
            "public_dns": "ec2-3-112-171-112.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "3.112.171.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e934c8631abcb51e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-01f205f1009b7f744"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02ac64e84036e7037",
            "tags": {
              "Name": "jump_server"
            },
            "tags_all": {
              "Name": "jump_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01f205f1009b7f744"
            ]
          },
          "dependencies": [
            "module.ami_module.data.aws_ami.my_ami",
            "module.security_group_module.aws_security_group.public_security_group",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.internetGW_modle[\"IGW01\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:252820710416:internet-gateway/igw-0848f7c969c747513",
            "id": "igw-0848f7c969c747513",
            "owner_id": "252820710416",
            "tags": {
              "Name": "myinternetGW"
            },
            "tags_all": {
              "Name": "myinternetGW"
            },
            "vpc_id": "vpc-02b400c1ad446b529"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_listner_module[\"loadbalancer_listner\"]",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:252820710416:listener/app/LB/3a4385a60dcd9023/578b34e4b8814b9c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:252820710416:targetgroup/TG01/75beebeec44761b3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:252820710416:listener/app/LB/3a4385a60dcd9023/578b34e4b8814b9c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:252820710416:loadbalancer/app/LB/3a4385a60dcd9023",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_module.aws_lb.app_lb",
            "module.security_group_module.aws_security_group.public_security_group",
            "module.subnet_module.aws_subnet.main",
            "module.target_group_module.aws_lb_target_group.tg_alb",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_module[\"LB\"]",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:252820710416:loadbalancer/app/LB/3a4385a60dcd9023",
            "arn_suffix": "app/LB/3a4385a60dcd9023",
            "desync_mitigation_mode": "defensive",
            "dns_name": "LB-908196535.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:252820710416:loadbalancer/app/LB/3a4385a60dcd9023",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a929038fc601c414"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02ac64e84036e7037"
              },
              {
                "subnet_id": "subnet-0b30c03f2137f33e0"
              }
            ],
            "subnets": [
              "subnet-02ac64e84036e7037",
              "subnet-0b30c03f2137f33e0"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-02b400c1ad446b529",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "module.security_group_module.aws_security_group.public_security_group",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.natGW_module[\"NGW01\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-001258a1debe3af4e",
            "association_id": "eipassoc-0d8440c98ac3787b2",
            "connectivity_type": "public",
            "id": "nat-02a0847759f209199",
            "network_interface_id": "eni-074f21fd05e257288",
            "private_ip": "192.168.23.104",
            "public_ip": "13.114.121.210",
            "subnet_id": "subnet-02ac64e84036e7037",
            "tags": {
              "Name": "NGW01"
            },
            "tags_all": {
              "Name": "NGW01"
            }
          },
          "dependencies": [
            "module.eip_module.aws_eip.nat",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.natGW_module[\"NGW02\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09ef7f27f6a71ddbf",
            "association_id": "eipassoc-0914774430dba6460",
            "connectivity_type": "public",
            "id": "nat-0c924a505bc671b0f",
            "network_interface_id": "eni-0e03870845dbd3861",
            "private_ip": "192.168.58.179",
            "public_ip": "52.193.151.38",
            "subnet_id": "subnet-0b30c03f2137f33e0",
            "tags": {
              "Name": "NGW02"
            },
            "tags_all": {
              "Name": "NGW02"
            }
          },
          "dependencies": [
            "module.eip_module.aws_eip.nat",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.natGW_module[\"NGW03\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d460b31acc130bc",
            "association_id": "eipassoc-0a302b1f8e352cf06",
            "connectivity_type": "public",
            "id": "nat-0f9915c346488ceff",
            "network_interface_id": "eni-00be895f2811e9be8",
            "private_ip": "192.168.19.38",
            "public_ip": "3.114.210.192",
            "subnet_id": "subnet-02ac64e84036e7037",
            "tags": {
              "Name": "NGW03"
            },
            "tags_all": {
              "Name": "NGW03"
            }
          },
          "dependencies": [
            "module.eip_module.aws_eip.nat",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.natGW_module[\"NGW04\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0caf22c6bb9c1cbf0",
            "association_id": "eipassoc-06c1f670724a2457b",
            "connectivity_type": "public",
            "id": "nat-02b22f01055d24169",
            "network_interface_id": "eni-0e0e78e385918d324",
            "private_ip": "192.168.52.106",
            "public_ip": "52.195.88.92",
            "subnet_id": "subnet-0b30c03f2137f33e0",
            "tags": {
              "Name": "NGW04"
            },
            "tags_all": {
              "Name": "NGW04"
            }
          },
          "dependencies": [
            "module.eip_module.aws_eip.nat",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association_module[\"RTAss01\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060e7bdf33e6b9d53",
            "route_table_id": "rtb-087a65e8055bb46f6",
            "subnet_id": "subnet-02ac64e84036e7037"
          },
          "dependencies": [
            "module.eip_module.aws_eip.nat",
            "module.internetGW_modle.aws_internet_gateway.gw",
            "module.natGW_module.aws_nat_gateway.natGW",
            "module.route_table_module.aws_route_table.myrouteTable",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association_module[\"RTAss02\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070b0e20662979fd2",
            "route_table_id": "rtb-087a65e8055bb46f6",
            "subnet_id": "subnet-0b30c03f2137f33e0"
          },
          "dependencies": [
            "module.eip_module.aws_eip.nat",
            "module.internetGW_modle.aws_internet_gateway.gw",
            "module.natGW_module.aws_nat_gateway.natGW",
            "module.route_table_module.aws_route_table.myrouteTable",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association_module[\"RTAss03\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fe078b3d8525bae",
            "route_table_id": "rtb-051353c847281aaa6",
            "subnet_id": "subnet-078bb4d8b557754a5"
          },
          "dependencies": [
            "module.eip_module.aws_eip.nat",
            "module.internetGW_modle.aws_internet_gateway.gw",
            "module.natGW_module.aws_nat_gateway.natGW",
            "module.route_table_module.aws_route_table.myrouteTable",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association_module[\"RTAss04\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb662fcdf25d7b29",
            "route_table_id": "rtb-026673e7c4ac0db67",
            "subnet_id": "subnet-05e6a4c8717a2431d"
          },
          "dependencies": [
            "module.eip_module.aws_eip.nat",
            "module.internetGW_modle.aws_internet_gateway.gw",
            "module.natGW_module.aws_nat_gateway.natGW",
            "module.route_table_module.aws_route_table.myrouteTable",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association_module[\"RTAss05\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2e95d4ac5591bd7",
            "route_table_id": "rtb-0b070a9bd18b584cc",
            "subnet_id": "subnet-030d8c4e61a83591d"
          },
          "dependencies": [
            "module.eip_module.aws_eip.nat",
            "module.internetGW_modle.aws_internet_gateway.gw",
            "module.natGW_module.aws_nat_gateway.natGW",
            "module.route_table_module.aws_route_table.myrouteTable",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association_module[\"RTAss06\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019aaf4b14e4fc521",
            "route_table_id": "rtb-0c8d985a2c0fe1def",
            "subnet_id": "subnet-087ff36f1f7b8126b"
          },
          "dependencies": [
            "module.eip_module.aws_eip.nat",
            "module.internetGW_modle.aws_internet_gateway.gw",
            "module.natGW_module.aws_nat_gateway.natGW",
            "module.route_table_module.aws_route_table.myrouteTable",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_module[\"RT01\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myrouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:252820710416:route-table/rtb-087a65e8055bb46f6",
            "id": "rtb-087a65e8055bb46f6",
            "owner_id": "252820710416",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0848f7c969c747513",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b400c1ad446b529"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eip_module.aws_eip.nat",
            "module.internetGW_modle.aws_internet_gateway.gw",
            "module.natGW_module.aws_nat_gateway.natGW",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_module[\"RT02\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myrouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:252820710416:route-table/rtb-051353c847281aaa6",
            "id": "rtb-051353c847281aaa6",
            "owner_id": "252820710416",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-02a0847759f209199",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b400c1ad446b529"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eip_module.aws_eip.nat",
            "module.internetGW_modle.aws_internet_gateway.gw",
            "module.natGW_module.aws_nat_gateway.natGW",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_module[\"RT03\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myrouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:252820710416:route-table/rtb-026673e7c4ac0db67",
            "id": "rtb-026673e7c4ac0db67",
            "owner_id": "252820710416",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0c924a505bc671b0f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b400c1ad446b529"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eip_module.aws_eip.nat",
            "module.internetGW_modle.aws_internet_gateway.gw",
            "module.natGW_module.aws_nat_gateway.natGW",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_module[\"RT04\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myrouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:252820710416:route-table/rtb-0b070a9bd18b584cc",
            "id": "rtb-0b070a9bd18b584cc",
            "owner_id": "252820710416",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f9915c346488ceff",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b400c1ad446b529"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eip_module.aws_eip.nat",
            "module.internetGW_modle.aws_internet_gateway.gw",
            "module.natGW_module.aws_nat_gateway.natGW",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_module[\"RT05\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myrouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:252820710416:route-table/rtb-0c8d985a2c0fe1def",
            "id": "rtb-0c8d985a2c0fe1def",
            "owner_id": "252820710416",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-02b22f01055d24169",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b400c1ad446b529"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eip_module.aws_eip.nat",
            "module.internetGW_modle.aws_internet_gateway.gw",
            "module.natGW_module.aws_nat_gateway.natGW",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_module[\"lb_security_group\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:252820710416:security-group/sg-0a929038fc601c414",
            "description": "lb_security_group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a929038fc601c414",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb_security_group",
            "name_prefix": "",
            "owner_id": "252820710416",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lb_security_group"
            },
            "tags_all": {
              "Name": "lb_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b400c1ad446b529"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_module[\"public_security_group\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:252820710416:security-group/sg-01f205f1009b7f744",
            "description": "public_security_group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01f205f1009b7f744",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "public_security_group",
            "name_prefix": "",
            "owner_id": "252820710416",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public_security_group"
            },
            "tags_all": {
              "Name": "public_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b400c1ad446b529"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_module[\"rds_security_group\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:252820710416:security-group/sg-0d68f568e605c7656",
            "description": "rds_security_group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d68f568e605c7656",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_security_group",
            "name_prefix": "",
            "owner_id": "252820710416",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds_security_group"
            },
            "tags_all": {
              "Name": "rds_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b400c1ad446b529"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module[\"private-subnet-app-ap-northeast-1a\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:252820710416:subnet/subnet-078bb4d8b557754a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078bb4d8b557754a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "252820710416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-app-ap-northeast-1a"
            },
            "tags_all": {
              "Name": "private-subnet-app-ap-northeast-1a"
            },
            "vpc_id": "vpc-02b400c1ad446b529"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module[\"private-subnet-app-ap-northeast-1d\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:252820710416:subnet/subnet-05e6a4c8717a2431d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "192.168.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e6a4c8717a2431d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "252820710416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-app-ap-northeast-1d"
            },
            "tags_all": {
              "Name": "private-subnet-app-ap-northeast-1d"
            },
            "vpc_id": "vpc-02b400c1ad446b529"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module[\"private-subnet-db-ap-northeast-1c\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:252820710416:subnet/subnet-030d8c4e61a83591d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "192.168.128.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030d8c4e61a83591d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "252820710416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-db-ap-northeast-1c"
            },
            "tags_all": {
              "Name": "private-subnet-db-ap-northeast-1c"
            },
            "vpc_id": "vpc-02b400c1ad446b529"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module[\"private-subnet-db-ap-northeast-1d\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:252820710416:subnet/subnet-087ff36f1f7b8126b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "192.168.160.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087ff36f1f7b8126b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "252820710416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-db-ap-northeast-1d"
            },
            "tags_all": {
              "Name": "private-subnet-db-ap-northeast-1d"
            },
            "vpc_id": "vpc-02b400c1ad446b529"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module[\"public-subnet-web-ap-northeast-1a\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:252820710416:subnet/subnet-02ac64e84036e7037",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ac64e84036e7037",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "252820710416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-web-ap-northeast-1a"
            },
            "tags_all": {
              "Name": "public-subnet-web-ap-northeast-1a"
            },
            "vpc_id": "vpc-02b400c1ad446b529"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module[\"public-subnet-web-ap-northeast-1d\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:252820710416:subnet/subnet-0b30c03f2137f33e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "192.168.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b30c03f2137f33e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "252820710416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-web-ap-northeast-1d"
            },
            "tags_all": {
              "Name": "public-subnet-web-ap-northeast-1d"
            },
            "vpc_id": "vpc-02b400c1ad446b529"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.target_group_attach_module[\"TGAttach01\"]",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:252820710416:targetgroup/TG01/75beebeec44761b3-20230605085700616000000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:252820710416:targetgroup/TG01/75beebeec44761b3",
            "target_id": "i-0ce06226e6faa1009"
          },
          "dependencies": [
            "module.ami_module.data.aws_ami.my_ami",
            "module.instance_module.aws_instance.web",
            "module.security_group_module.aws_security_group.public_security_group",
            "module.subnet_module.aws_subnet.main",
            "module.target_group_module.aws_lb_target_group.tg_alb",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.target_group_attach_module[\"TGAttach02\"]",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:252820710416:targetgroup/TG01/75beebeec44761b3-20230605085700542500000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:252820710416:targetgroup/TG01/75beebeec44761b3",
            "target_id": "i-00cffa94f42a70b23"
          },
          "dependencies": [
            "module.ami_module.data.aws_ami.my_ami",
            "module.instance_module.aws_instance.web",
            "module.security_group_module.aws_security_group.public_security_group",
            "module.subnet_module.aws_subnet.main",
            "module.target_group_module.aws_lb_target_group.tg_alb",
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.target_group_module[\"TG01\"]",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:252820710416:targetgroup/TG01/75beebeec44761b3",
            "arn_suffix": "targetgroup/TG01/75beebeec44761b3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:252820710416:targetgroup/TG01/75beebeec44761b3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "TG01",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02b400c1ad446b529"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module[\"VPC01\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:252820710416:vpc/vpc-02b400c1ad446b529",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0028e4249cad87041",
            "default_route_table_id": "rtb-096fa93ef0048ce0d",
            "default_security_group_id": "sg-04b6415e282309d14",
            "dhcp_options_id": "dopt-04467674a19d4af52",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02b400c1ad446b529",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-096fa93ef0048ce0d",
            "owner_id": "252820710416",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          }
        }
      ]
    }
  ]
}